[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pynuget"
version = "0.1.0"
description = "Python module for interacting with Nuget Server and packages."
requires-python = ">=3.7"
authors = [
    {name = "Sean Donnellan", email = "darkdonno@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests ~= 2.28.1",
]
